# Strand-I-believe-I-can-fly-Studien3

./: README.md  build.sh  hard_clear.sh
Alte_Versionen/i-believe-i-can-fly-v1/: .gitignore  AR.Drone.sln  DroneControl.fis  ImageAttributions.html
Alte_Versionen/i-believe-i-can-fly-v1.5/: SETUP  Zusammenfassung  startup  world3
Alte_Versionen/i-believe-i-can-fly-v1.5/kinect_controller/: CMakeLists.txt
Alte_Versionen/i-believe-i-can-fly-v1.5/kinect_controller/misc/: kinect.cp2  kinect.cp2~  main.cpp  main.cpp~
Alte_Versionen/i-believe-i-can-fly-v1.5/kinect_controller/src/: FuzzyController.cpp  FuzzyController.cpp~
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone/: AR.Drone.csproj  DroneConstants.cs  ErrorStateData.cs  GlobalSuppressions.cs  Program.cs  README.md
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Client/: AR.Drone.Client.csproj  App.xaml  App.xaml.cs  Calibration.xaml  Calibration.xaml.cs  DroneCockpit.xaml  DroneCockpit.xaml.cs  MainMenu.xaml  MainMenu.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Options.xaml  Options.xaml.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Client/Controls/: DoneControl.xaml  DoneControl.xaml.cs  Exit.xaml  Exit.xaml.cs  Libra.xaml  Libra.xaml.cs  MovingClouds.xaml  MovingClouds.xaml.cs  Options.xaml  Options.xaml.cs  OrangeSlider.xaml  OrangeSlider.xaml.cs  RefreshControl.xaml  RefreshControl.xaml.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Client/HUD/: HUDViewer.xaml  HUDViewer.xaml.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Client/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Client/Ressources/: CommonRessource.Designer.cs  CommonRessource.resx
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.FuzzyController/: AR.Drone.Fuzzy.csproj  FISResult.cs  FuzzyController.cs  Program.cs  input.fis
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.FuzzyController/Properties/: AssemblyInfo.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Kinect/: AR.Drone.Kinect.csproj  Calibrater.cs  CalibrationDataSource.cs  ColorSerializer.cs  Constants.cs  FrameSerializer.cs  KinectController.cs  SensorChangedEventArgs.cs  SignalSmoother.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Kinect/Properties/: AssemblyInfo.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Kinect/Ressources/: CalibrationRessource.Designer.cs  CalibrationRessource.resx
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Mock/: AR.Drone.Mock.csproj
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Mock/Properties/: AssemblyInfo.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.Mock/Video/: VideoMockServer.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.WIFI/: AR.Drone.WIFI.csproj  Program.cs  WlanHelper.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.WIFI/Profile/: WifiProfileOpenSecurity.xml
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone.WIFI/Properties/: AssemblyInfo.cs
Alte_Versionen/i-believe-i-can-fly-v1/AR.Drone/Configuration/: ConfigurationReceiver.cs  ConfigurationTask.cs  DroneConfiguration.cs
Alte_Versionen/i-believe-i-can-fly-v1/Headtracker/: AR.Drone.Headtracker.csproj  HeadTrackerController.cs  HeadTrackerErrorState.cs  NativeMethods.cs  Program.cs  Tracker.cs  USED_CAMERA.cs
Alte_Versionen/i-believe-i-can-fly-v1/WlanTest/: Program.cs  WlanTest.csproj
Alte_Versionen/i-believe-i-can-fly-v2/: .gitmodules  README.md  hard_clear.sh
Alte_Versionen/i-believe-i-can-fly-v2/deployment/: I-believe-I-can-fly-Demo.sh  launch_IBelieveICanFly_Demo.sh  launch_openPose_Demo.sh
Alte_Versionen/i-believe-i-can-fly-v2/doc/: Bisherige Zusammenfassung.txt  Steuerungslogik
Alte_Versionen/i-believe-i-can-fly-v2/orga/: Logbuch.docx  TINF-Anmeldung-Thema-Studienarbeit.docx
Alte_Versionen/i-believe-i-can-fly-v2/src/: I-believe-I-can-fly-Demo.sh
Alte_Versionen/i-believe-i-can-fly-v2/src/catkin/src/i_believe_i_can_fly_airsim_connector/: CMakeLists.txt  package.xml
Alte_Versionen/i-believe-i-can-fly-v2/src/catkin/src/i_believe_i_can_fly_airsim_connector/src/: airsim_instruction_builder.py  drone_controller.py  instruction.py  node.py
Alte_Versionen/i-believe-i-can-fly-v2/src/catkin/src/i_believe_i_can_fly_common/: CMakeLists.txt  package.xml
deployment/: Multi-Person-Tracking-with-OpenPose-Demo.sh  core-file.txt
doc/: .~lock.Problembehandlung.docx#  Links  Problembehandlung.docx  Schnellstart - Anleitung.docx  Setup  Setup_V3  VirtualBox Commands.txt  Zu_Beachten.txt
doc/Studienarbeiten/: Studienarbeit 2019 - Henri Kohlberg.docx
src/: .gitignore
src/catkin/: .gitignore  i-believe-i-can-fly-showcase.launch  i-believe-i-can-fly.launch
src/catkin/src/i_believe_i_can_fly_drone_connector/: CMakeLists.txt  i_believe_i_can_fly_drone_connector.launch  package.xml
src/catkin/src/i_believe_i_can_fly_person_detection/: CMakeLists.txt  package.xml
src/catkin/src/i_believe_i_can_fly_person_detection/src/: node.py  openpose_runner.py  util.py
src/catkin/src/i_believe_i_can_fly_pose_detection/: CMakeLists.txt  i_believe_i_can_fly_pose_detection.launch  package.xml
src/catkin/src/i_believe_i_can_fly_pose_detection/msg/: Instruction.msg
src/catkin/src/i_believe_i_can_fly_pose_detection/src/: calibrator.py  node.py  point.py  view_controller_2D.py
src/data/OpenPose Demo#1/: log
src/data/OpenPose Demo#2/: log  log_minified
src/data/OpenPose Demo#3/: log  log_minified
src/python/: airsim_controller.py  openpose_webcam_tracking.py
(+134 files in other folders)
