<?xml version="1.0"?>
<package format="2">
    <name>i_believe_i_can_fly_pose_detection</name>
    <version>0.0.0</version>
    <description>Detects the pose of a persons keypoints.</description>

    <maintainer email="kohlberg.henri@student.dhbw-karlsruhe.de">Henri Kohlberg</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <author email="kohlberg.henri@student.dhbw-karlsruhe.de">Henri Kohlberg</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>i_believe_i_can_fly_common</build_depend>
    <build_depend>i_believe_i_can_fly_person_detection</build_depend>

    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>i_believe_i_can_fly_common</build_export_depend>
    <build_export_depend>i_believe_i_can_fly_person_detection</build_export_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>i_believe_i_can_fly_common</exec_depend>
    <exec_depend>i_believe_i_can_fly_person_detection</exec_depend>

    <export>

    </export>
</package>
